--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>exersice_2</title>
+		<title>Exercise4BookStore</title>
 		<script id="sap-ui-bootstrap"
 			src="resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_fiori_3"
-			data-sap-ui-resourceroots='{"com.kpmg.exersice_2": "./"}'
+			data-sap-ui-resourceroots='{"kpmg.com.Exercise4BookStore": "./"}'
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-async="true"
@@ -15,6 +15,6 @@
 		</script>
 	</head>
 	<body class="sapUiBody">
-		<div data-sap-ui-component data-name="com.kpmg.exersice_2" data-id="container" data-settings='{"id" : "exersice_2"}'></div>
+		<div data-sap-ui-component data-name="kpmg.com.Exercise4BookStore" data-id="container" data-settings='{"id" : "Exercise4BookStore"}'></div>
 	</body>
 </html>
