--- a/webapp/test/unit/unitTests.qunit.html
+++ b/webapp/test/unit/unitTests.qunit.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Unit tests for com.kpmg.exersice_2</title>
+	<title>Unit tests for kpmg.com.Exercise4BookStore</title>
 
 	<script id="sap-ui-bootstrap"
 		src="../../../resources/sap-ui-core.js"
 		data-sap-ui-resourceroots='{
-			"com/kpmg/exersice_2": "../../"			
+			"kpmg/com/Exercise4BookStore": "../../"			
 		}'>
 	</script>
 
